third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/all_fields_skipped.rs
#[derive(derive_more::Mul)]
struct Foo(#[mul(skip)] i32);

#[derive(derive_more::Mul)]
#[mul(forward)]
struct Bar(#[mul(skip)] i32);

#[derive(derive_more::Mul)]
#[mul(forward)]
enum Enum {
    Baz { #[mul(skip)] x: i32, #[mul(ignore)] y: i32 },
}

fn main() {}
